# AI-powered-Development

./: README.md
forex_mcp_server/: .env.example  mcp_config.json  project_prompt.md  pyproject.toml  start_mcpo.sh  start_sse.sh
forex_mcp_server/src/forex_mcp_server/: server.py
lightRAG_MCP_Server/: book_small.txt  lightrag_mcp_server.py  lightrag_ollama_test.py  mcp_settings.json  project_agent_log.txt  project_prompt.md
news_sub_app/: .gitignore  Dockerfile  README.md  containers.json  deploy.sh  public-endpoint.json  tailwind.config.js  tsconfig.json
news_sub_app/components/ui/: Notification.tsx  SubscriptionForm.tsx
news_sub_app/deployment/: Dockerfile  container.json  containers.json  next.config.js  package-lock.json  public-endpoint.json
news_sub_app/deployment/.next/: BUILD_ID  build-manifest.json  (+5 more)
news_sub_app/layouts/: MainLayout.tsx
news_sub_app/pages/: _app.tsx  confirm.tsx  index.tsx  unsubscribe.tsx
news_sub_app/styles/: globals.css
news_sub_app/types/: index.ts
openai-visual-workflow/: .gitignore  AGENT_TEMPLATES_PLAN.md  ALTERNATIVE_APPROACH.md  COLLAPSIBLE_HELP_PLAN.md  DISPLAY_USERNAME_PLAN.md  DOCS_UPDATE_PLAN.md  ENHANCED_CODE_MODAL_PLAN.md  HIGH_LEVEL_REQUIREMENTS.md  IMPROVED_FUNCTIONAL_REQUIREMENTS.md  IMPROVED_INITIAL_PROMPT.md  LANDING_PAGE_PLAN.md  LOGIN_FEATURE_PLAN.md  PROJECT_PROMPT.md  README.md  TASK_BREAKDOWN.md  TEMPLATE_RUNNER_UPDATE_PLAN.md  UPDATED_SOLUTION_DIAGRAM.md  index.html  package-lock.json  package.json  solution_diagram.md  style.css
openai-visual-workflow/src/: App.jsx  main.jsx
referral_app/: README.md  api_docs.md  api_test.md  index.html  package-lock.json  package.json  project_prompt.md  records.json  referral_app_architecture.md  tsconfig.node.json  vite.config.ts
referral_app/src/: App.tsx
stockanalyst_mcp_server/: .env.example  .gitignore  README.md  mcp_client.py  mcp_config.json  project_prompt.md  pyproject.toml  start_mcpo.sh
stockanalyst_mcp_server/stockanalyst_mcp_tool/: __main__.py  server.py
tariff-news-server/: README.md  mcp_settings.json
(+73 files in other folders)
