[project]
name = "stockanalyst_mcp_tool"
version = "0.1.0"
description = "An MCP server providing stock analysis tools using the AlphaVantage API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
    "python-dotenv>=1.0.0",
    "anyio>=4.5", 
    "click>=8.1.0",
    "uvloop"
]

[project.scripts]
stockanalyst_mcp_tool = "stockanalyst_mcp_tool.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stockanalyst_mcp_tool"]

[tool.pyright]
include = ["stockanalyst_mcp_tool"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
